# crossterm-input

./: CHANGELOG.md  Cargo.toml  README.md
examples/: foo.rs
src/: event_pool.rs  event_source.rs  event_stream.rs  input.rs  lib.rs  new.rs  rewrite.rs  spmc.rs  sys.rs
src/event_source/: fake.rs  tty.rs  winapi.rs
src/input/: input.rs  unix.rs  unix_input.rs  windows.rs  windows_input.rs
src/new/: event_iterator.rs  input_pool.rs  input_stream.rs  sys.rs
src/new/sys/: winapi_input_source.rs
src/rewrite/: event_iterator.rs  event_pool.rs  event_stream.rs  input_pool.rs  input_source.rs  input_stream.rs  spmc.rs
src/rewrite/event_source/: fake.rs  tty.rs  winapi.rs
src/rewrite/input_source/: fake.rs  tty.rs  winapi.rs
src/sys/: unix.rs  winapi.rs
