[package]
name = "crossterm_input"
version = "0.4.1"
authors = ["T. Post"]
description = "A cross-platform library for reading userinput."
repository = "https://github.com/crossterm-rs/crossterm-input"
documentation = "https://docs.rs/crossterm_input/"
license = "MIT"
keywords = ["input", "keys", "crossterm", "events", "terminal"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"
edition = "2018"

[badges]
maintenance = { status = "deprecated" }

[target.'cfg(windows)'.dependencies]
winapi = { version =  "0.3.8", features = ["winnt", "winuser"] }
crossterm_winapi = { version = "0.2.2" }

[target.'cfg(unix)'.dependencies]
libc = "0.2.51"
mio = "0.6.19"

[dependencies]
crossterm_utils = { version = "0.4.0" }
crossterm_screen = { version = "0.3.2" }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"], optional = true }
